# TpFinalProgAvanzada

./: CMakeLists.txt  README.md  mpi_crossfade.cpp  omp_crossfade.cpp  sequential.cpp
bat/: runall.bat  runnotseq.bat
